--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**/*.ts ",
+    "format": "eslint src/**/*.ts --fix"
   },
   "author": "freedsoul",
   "license": "ISC",
@@ -27,6 +29,9 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/pg": "^8.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
